--- a/package.json
+++ b/package.json
@@ -9,23 +9,23 @@
   "jsnext:main": "dist/magic-string.es.js",
   "license": "MIT",
   "dependencies": {
-    "vlq": "^0.2.1"
+    "vlq": "0.2.1"
   },
   "devDependencies": {
-    "buble": "^0.14.0",
-    "codecov.io": "^0.1.6",
-    "console-group": "^0.3.2",
-    "eslint": "^3.7.1",
-    "istanbul": "^0.4.5",
-    "mocha": "^3.1.0",
-    "remap-istanbul": "^0.6.4",
-    "resolve": "^1.1.7",
-    "rollup": "^0.36.1",
-    "rollup-plugin-buble": "^0.14.0",
-    "rollup-plugin-node-resolve": "^2.0.0",
-    "rollup-plugin-replace": "^1.1.1",
-    "source-map": "^0.5.6",
-    "source-map-support": "^0.4.3"
+    "buble": "0.15.2",
+    "codecov.io": "0.1.6",
+    "console-group": "0.3.3",
+    "eslint": "3.16.0",
+    "istanbul": "0.4.5",
+    "mocha": "3.2.0",
+    "remap-istanbul": "0.9.1",
+    "resolve": "1.2.0",
+    "rollup": "0.41.4",
+    "rollup-plugin-buble": "0.15.0",
+    "rollup-plugin-node-resolve": "2.0.0",
+    "rollup-plugin-replace": "1.1.1",
+    "source-map": "0.5.6",
+    "source-map-support": "0.4.11"
   },
   "keywords": [
     "string",
@@ -45,7 +45,7 @@
     "build:es": "rollup -c --environment ES",
     "build:umd": "rollup -c --environment DEPS",
     "build": " npm run build:cjs && npm run build:es && npm run build:umd",
-    "prepublish": "rm -rf dist && npm test && npm run build:es && npm run build:umd",
+    "prepublish": "rm -rf dist && npm test && npm run lint && npm run build:es && npm run build:umd",
     "lint": "eslint src test",
     "watch:cjs": "rollup -w -c",
     "watch:es": "rollup -w -c --environment ES",
