--- a/.eslintrc
+++ b/.eslintrc
@@ -19,7 +19,8 @@
         "prefer-const": 2,
         "arrow-spacing": 2,
         "no-cond-assign": 0,
-        "no-constant-condition": 0
+        "no-constant-condition": 0,
+        "no-useless-escape": 1
     },
     "env": {
         "es6": true,
