--- a/package.json
+++ b/package.json
@@ -1,31 +1,31 @@
 {
-  "name": "magic-string",
+  "name": "@gerhobbelt/magic-string",
   "description": "Modify strings, generate sourcemaps",
   "author": "Rich Harris",
-  "version": "0.19.0",
+  "version": "0.19.0-1",
   "repository": "https://github.com/rich-harris/magic-string",
   "main": "dist/magic-string.cjs.js",
   "module": "dist/magic-string.es.js",
   "jsnext:main": "dist/magic-string.es.js",
   "license": "MIT",
   "dependencies": {
-    "vlq": "0.2.1"
+    "vlq": "1.0.1"
   },
   "devDependencies": {
-    "buble": "0.15.2",
+    "@gerhobbelt/source-map": "0.8.0-11",
+    "buble": "0.19.8",
     "codecov.io": "0.1.6",
     "console-group": "0.3.3",
-    "eslint": "3.16.0",
+    "eslint": "6.1.0",
     "istanbul": "0.4.5",
-    "mocha": "3.2.0",
-    "remap-istanbul": "0.9.1",
-    "resolve": "1.2.0",
-    "rollup": "0.41.4",
-    "rollup-plugin-buble": "0.15.0",
-    "rollup-plugin-node-resolve": "2.0.0",
-    "rollup-plugin-replace": "1.1.1",
-    "source-map": "0.5.6",
-    "source-map-support": "0.4.11"
+    "mocha": "6.2.0",
+    "remap-istanbul": "0.13.0",
+    "resolve": "1.11.1",
+    "rollup": "1.17.0",
+    "rollup-plugin-buble": "0.19.8",
+    "rollup-plugin-node-resolve": "5.2.0",
+    "rollup-plugin-replace": "2.2.0",
+    "source-map-support": "0.5.12"
   },
   "keywords": [
     "string",
@@ -45,12 +45,13 @@
     "build:es": "rollup -c --environment ES",
     "build:umd": "rollup -c --environment DEPS",
     "build": " npm run build:cjs && npm run build:es && npm run build:umd",
-    "prepublish": "rm -rf dist && npm test && npm run lint && npm run build:es && npm run build:umd",
+    "prep": "rm -rf dist && npm test && npm run lint",
     "lint": "eslint src test",
     "watch:cjs": "rollup -w -c",
     "watch:es": "rollup -w -c --environment ES",
     "watch:umd": "rollup -w -c --environment DEPS",
-    "watch": "npm run watch:es"
+    "watch": "npm run watch:es",
+    "pub": "npm publish --access public"
   },
   "files": [
     "src/*",
